methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:1: error: Missing closing brace `}' assumed here
def faireV() {
^PictureMono1:1: error: expected class or object definition
def faireV() {
^